Доделал дз